# mcp-gateway

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  DESIGN_SESSION_RESILIENCE.md  Dockerfile  IDLE_TIMEOUT_IMPLEMENTATION.md  README.md  RUNBOOK.md  SESSION_RESILIENCE_STATUS.md  auto_start_shim.sh  nohup.out  pyproject.toml  sonar-project.properties  start_mcp_gateway.sh  test_mirror_hang.py
config/: idle_timeout.env  tools.yaml
docs/: RUST_SHIM_TROUBLESHOOTING.md
docs/migration/: GENAI_TOOLBOX_DECISION.md  MIGRATION_LOG.md  PARAMETER_STANDARDIZATION.md
scripts/: batch_convert_pdfs_standalone.py  batch_extract_standalone.py  hwc_e2e_test_runner.sh  manage_shim_auto_start.sh  validate_tools_config.py  write_test.py
src/: __init__.py  ai_platform_metrics.py  config.rs  lib.rs  lifecycle.rs  main.py  main.rs  platform_services.rs  preflight.py  registry.rs  server.py  session.rs  spawn.rs  tool_dispatcher.py  tool_registry.py  tools_rest_api.py
src/config/: health_config.py
src/core/: __init__.py  cold_warm_promoter.py  config.py  errors.py  health_config.py  idle_timeout.py  idle_timeout_checker.py  keys.py  service_key.py
src/middleware/: health_proxy.py  idle_timeout.py  metrics.py  session_recovery.py  tracing.py
src/models/: __init__.py  budget.py  schemas.py  tenant.py
src/resilience/: __init__.py  circuit_breaker.py
src/security/: __init__.py  audit.py  authn.py  authz.py  cypher_validator.py  input_validators.py  output_sanitizer.py  path_validator.py  rate_limiter.py
src/tools/: __init__.py  _resolvers.py  a2a_cancel_task.py  a2a_get_task.py  a2a_send_message.py  agent_execute.py  amve_base.py  amve_build_call_graph.py  amve_detect_boundaries.py  amve_detect_communication.py  amve_detect_dead_code.py  amve_detect_drift.py  amve_detect_patterns.py  amve_evaluate_fitness.py  amve_extract_architecture.py  amve_generate_architecture_log.py  analyze_taxonomy_coverage.py  ask.py  audit_base.py  audit_code_metrics.py  audit_codebase_scan.py  audit_corpus_search.py  audit_dependency_assess.py  audit_quality_scan.py  audit_resolve_lookup.py  audit_search_cves.py  audit_search_exploits.py  audit_security_scan.py  batch_enrich_metadata.py  batch_extract_metadata.py  cms_base.py  cms_chunk.py  cms_get_glossary.py  cms_get_metrics.py  cms_glossary_define.py  cms_optimize.py  cms_process.py  cms_validate.py  cms_warmup.py  code_analyze.py  (+47 more)
tests/: health_timeout_test.py  lifecycle_test.rs  port_leak_test.rs  port_leak_test2.rs  service_key_test.py  spawn_test.rs  test_cold_warm_promotion.py  test_idle_timeout_checker.py  test_service_key_normalization.py  test_warm_cold_actuator.py  tool_dispatch_test.py
tests/integration/: conftest.py  test_e2e_phases_1_2_3.py  test_hwc_e2e_startup.py  test_mcp_amve_boundaries.py  test_mcp_amve_call_graph.py  test_mcp_amve_communication.py  test_mcp_amve_fitness.py  test_mcp_amve_patterns.py  test_mcp_protocol.py  test_mcp_vre_roundtrip.py  (+6 more)
(+59 files in other folders)
