[package]
name = "shim-mcp-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
