[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "MCP-compliant gateway service exposing AI platform tools to external LLM clients"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AI Engineering Team"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "gateway",
    "fastmcp",
    "ai-platform",
    "tool-dispatch",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # MCP protocol
    "fastmcp>=0.1.0",

    # HTTP client (backend dispatch)
    "httpx>=0.27.0",

    # Configuration + validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Authentication (JWT)
    "python-jose[cryptography]>=3.3.0",

    # Rate limiting
    "redis>=5.0.0",

    # YAML config
    "pyyaml>=6.0",

    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Source = "https://github.com/kevin-toles/mcp-gateway"
Issues = "https://github.com/kevin-toles/mcp-gateway/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live backend services",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
